
	General:
	* Correctly disable all missing dependencies when using the
	  --disable-missing-dependencies option.  (Gabriel Schulhof)

	Gadu-Gadu:
	* Fix display of avatars after a server-side change. (Krzysztof
	  Klinikowski)

	AIM:
	* Allow setting and displaying icons between 1x1 and 100x100 pixels.
	  Previously only icons between 48x48 and 50x50 were allowed.

	MSN:
	* File transfer requests will no longer cause a crash if you delete the
	  file before the other side accepts.
	* Received files will no longer hold an extra lock after completion,
	  meaning they can be moved or deleted without complaints from your OS.
	* Buddies who sign in from a second location will no longer cause an
	  unnecessary chat window to open.
	* Support setting an animated GIF as a buddy icon.
	* Numerous code cleanups and memory savings.

	MySpace:
	* Fix a leak and crash when retrieving buddy icons.

	XMPP:
	* Less likely to send messages to a contact's idle/inactive resource.
	  Previously, if a message was received from a specific resource,
	  responses would be sent to that resource until either it went offline
	  or a message is received from another resource.  Now, messages are sent
	  to the bare JID upon receipt of any presence change from the contact.
	* Added support for the SCRAM-SHA-1 SASL mechanism.  This is only
	  available when built without Cyrus SASL support.
	* When getting info on a domain-only (server) JID, show uptime
	  (when given by the result of the "last query") and don't show status as
	  offline.
	* Fix getting info on your own JID.
	* Wrap XHTML messages in <p>, as described in XEP-0071, for compatibility
	  with some clients.
	* Don't do an SRV lookup for a STUN server associated with the account
	  if one is already set globally in prefs.
	* Don't send custom smileys larger than the recommended maximum object size
	  specified in the BoB XEP.   This prevents a client from being
	  disconnected by servers that dislike overly-large stanzas.